# assignment2_cnn_api_full

./: API_SPEC.md  Makefile  README.md  RUBRIC_CHECKLIST.md  THEORY.md  client_predict.py
cnn_api/: .gitignore  Dockerfile  Dockerfile.uv  README.md  UV_SETUP.md  pyproject.toml  requirements.lock.txt  requirements.txt  train_cifar10.py
cnn_api/app/: labels.py  main.py
cnn_api/cnn_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cnn_api/helper_lib/: data_loader.py  evaluator.py  model.py  trainer.py
cnn_api/scripts/: generate_lockfiles.ps1  generate_lockfiles.sh  save_sample.py
cnn_api/tests/: smoke_test.py
cnn_api/weights/: cnn_cifar10.pt
scripts/: pack_with_weights.py
